--- a/react/src/App.css
+++ b/react/src/App.css
@@ -323,7 +323,7 @@ footer {
   transform: translateX(-50%);
   text-align: center; 
   font-size: 14px; 
-  color: #ffffff; 
+  color: #e7e3e3; 
   font-weight: 500; 
   
 }
