--- a/react/src/App.css
+++ b/react/src/App.css
@@ -157,8 +157,8 @@ body {
     font-size: 1rem;
     font-weight: bold;
     display: flex;
-    align-items: center; /* Vertically center the content */
-    justify-content: center; /* Horizontally center */
+    align-items: center; 
+    justify-content: center; 
     gap: 5px;
     transition: all 0.3s ease-in-out;
 }
@@ -178,8 +178,8 @@ body {
     color: #00ff00;
     font-family: "Courier New", monospace;
     padding: 20px;
-    width: 60%;
-    height: 350px;
+    width: 55%;
+    height: 45%px;
     overflow-y: auto;
     border-radius: 10px;
     border: 1px solid #00bcd4;
